# Sealed

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: sealed-action.yml  sealed-ci.yml
benchmarks/: bench.py  bench_results.json
docs/: API.md  ARCHITECTURE.md  SECURITY.md
docs/wiki/: CI-CD.md  CLI-Reference.md  Home.md  How-It-Works.md  Quick-Start.md  Security-Model.md  Snippets.md  Team-Setup.md  Troubleshooting.md  Use-Cases.md
paper/: sealed.aux  sealed.out  sealed.tex
sealed/: __init__.py  attestation.py  audit_source.py  builder.py  chain.py  cli.py  consensus.py  ecosystem.py  keystore.py  lockfile.py  os_keychain.py  policy.py  registry.py  reproduce.py  resolver.py  sandbox.py  seal.py  source.py  transparency.py  trust_graph.py  verify.py  watchdog.py
tests/: test_attestation.py  test_audit_source.py  test_chain.py  test_cli.py  test_consensus.py  test_ecosystem.py  test_edge_cases.py  test_integration.py  test_keystore.py  test_lockfile.py  test_new_edge_cases.py  test_os_keychain.py  test_policy.py  test_registry.py  test_reproduce.py  test_resolver.py  test_sandbox.py  test_seal.py  test_transparency.py  test_trust_graph.py  test_verify.py  test_watchdog.py
