[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alia-sealed"
version = "0.1.0"
description = "Cryptographic supply chain attestation. Every binary proven from source to artifact."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Tushar Sharma", email = "txshar@proton.me"}]
keywords = ["supply-chain", "attestation", "reproducible-builds", "cryptography", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyNaCl>=1.5.0",
    "httpx>=0.27.0",
]

[project.scripts]
sealed = "sealed.cli:main"

[project.urls]
Homepage = "https://github.com/TxsharDev/Sealed"
Repository = "https://github.com/TxsharDev/Sealed"

[tool.setuptools.packages.find]
include = ["sealed*"]
